engine/src/R3E/j3x/tests/bad/wrong_type_9.j3x
list[string] list = ["string"; "string_2"; 5]